[gd_scene load_steps=4 format=3 uid="uid://b0fepw6nwvmpr"]

[ext_resource type="Script" path="res://main.gd" id="1_8kpyb"]
[ext_resource type="Texture2D" uid="uid://b0nbtr3jx04hp" path="res://icon.svg" id="2_ihcgp"]

[sub_resource type="LabelSettings" id="LabelSettings_c0dn3"]
font_size = 66

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8kpyb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180005, 0.180005, 0.180005, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Left" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ToConvertList" type="ItemList" parent="HBoxContainer/Left"]
clip_contents = false
custom_minimum_size = Vector2(350, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -200.0
offset_right = 175.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
text_overrun_behavior = 0

[node name="Middle" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Middle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ihcgp")

[node name="Right" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Right"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -42.5
offset_right = 124.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2

[node name="BitRateContainer" type="HBoxContainer" parent="HBoxContainer/Right/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Right/VBoxContainer/BitRateContainer"]
layout_mode = 2
text = "Max filesize:"

[node name="MaxSizeEdit" type="LineEdit" parent="HBoxContainer/Right/VBoxContainer/BitRateContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "in MB"

[node name="FileTypeSelector" type="MenuButton" parent="HBoxContainer/Right/VBoxContainer"]
layout_mode = 2
text = "Select Target Filetype"
flat = false
autowrap_mode = 3

[node name="ExplanationText" type="RichTextLabel" parent="HBoxContainer/Right/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Right/VBoxContainer"]
layout_mode = 2

[node name="ConvertButton" type="Button" parent="HBoxContainer/Right/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Convert"

[node name="ClipBoardButton" type="Button" parent="HBoxContainer/Right/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Copy output
to clipboard"

[node name="ConvertingShowcaser" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "PLEASE WAIT, CONVERTING"
label_settings = SubResource("LabelSettings_c0dn3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.0.1"

[connection signal="item_selected" from="HBoxContainer/Left/ToConvertList" to="." method="_on_to_convert_list_item_selected"]
[connection signal="text_submitted" from="HBoxContainer/Right/VBoxContainer/BitRateContainer/MaxSizeEdit" to="." method="_on_max_size_edit_text_submitted"]
[connection signal="pressed" from="HBoxContainer/Right/VBoxContainer/HBoxContainer/ConvertButton" to="." method="_on_convert_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Right/VBoxContainer/HBoxContainer/ClipBoardButton" to="." method="_on_clip_board_button_pressed"]
